--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "tailwind": "^4.0.0",
     "web-vitals": "^0.2.4"
   },
-  "homepage": ".",
+  "homepage": "/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
